Fix Ads alignment

--- a/app/styles/layout/_ad.scss
+++ b/app/styles/layout/_ad.scss
@@ -6,13 +6,18 @@
 .os-ad-top{
   text-align: center;
   position: relative;
-  padding: 0px 70px;
+  left: auto;
+  right: auto;
+  margin: 0px -1000px;
 /*  margin-top: -8px;*/
 /*  margin-bottom: 16px;*/
 }
 .os-ad-bottom{
   text-align: center;
-  padding: 0px 60px;
+  position: relative;
+  left: auto;
+  right: auto;
+  margin: 0px -1000px;
 }
 
 .os-ad-middle{
